# asdf-standard

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  BUILD.md  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.md  bandit.yaml  conftest.py  convert_schemas.py  docs-requirements.txt  install-texlive.sh  md2rst.py  pip_requirements.txt  pyproject.toml  readthedocs.yml  reorg.py  setup.cfg  setup.py  test-requirements.txt  tox.ini  travis_deploy.sh  update-schemas.py
.github/workflows/: asdf-dev.yml  asdf_standard_ci.yml  changelog.yml  ci.yml  downstream.yml  publish-to-pypi.yml
docs/: Makefile
docs/source/: asdf-schemas.rst  asdf.rst  capt-of.sty  changes.rst  conf.py  core.rst  default-annotation.rst  definitions.rst  eqparbox.sty  extending-asdf.rst  file_layout.rst  implementation.rst  index.rst  intro.rst  known_limits.rst  legacy.rst  manifest.rst  meta-schemas.rst  schemas.rst  tree.rst  versioning.rst  yaml_schema.rst
docs/source/_static/: asdfstandard.css  custom.css
docs/source/_templates/: index.html  layout.html
docs/source/schemas/: asdf.rst  astronomy.rst  core.rst  fits.rst  index.rst  legacy.rst  manifest.rst  resources.rst  table.rst  time.rst  transform.rst  unit.rst  yaml_schema.rst
docs/source/standard/: dev_api.rst  index.rst  intro.rst  tree.rst
docs/source/tutorials/: 1.rst  2.rst  index.rst
reference_files/: README.rst
reference_files/0.1.0/: ascii.asdf  ascii.yaml  basic.asdf  basic.yaml  complex.asdf  complex.yaml  compressed.asdf  compressed.yaml  datatypes.asdf  datatypes.yaml  exploded.asdf  exploded.yaml  exploded0000.asdf  float.asdf  float.yaml  int.asdf  int.yaml  shared.asdf  shared.yaml  stream.asdf  stream.yaml  unicode_bmp.asdf  unicode_bmp.yaml  unicode_spp.asdf  unicode_spp.yaml
reference_files/1.0.0/: anchor.asdf  ascii.asdf  ascii.yaml  basic.asdf  basic.yaml  complex.asdf  complex.yaml  compressed.asdf  compressed.yaml  endian.asdf  endian.yaml  exploded.asdf  exploded.yaml  exploded0000.asdf  float.asdf  float.yaml  int.asdf  int.yaml  scalars.yaml  shared.asdf  shared.yaml  stream.asdf  stream.yaml  structured.asdf  structured.yaml  unicode_bmp.asdf  unicode_bmp.yaml  unicode_spp.asdf  unicode_spp.yaml
reference_files/1.1.0/: anchor.asdf  ascii.asdf  ascii.yaml  basic.asdf  basic.yaml  complex.asdf  complex.yaml  compressed.asdf  compressed.yaml  endian.asdf  endian.yaml  exploded.asdf  exploded.yaml  exploded0000.asdf  float.asdf  float.yaml  int.asdf  int.yaml  scalars.yaml  shared.asdf  shared.yaml  stream.asdf  stream.yaml  structured.asdf  structured.yaml  unicode_bmp.asdf  unicode_bmp.yaml  unicode_spp.asdf  unicode_spp.yaml
reference_files/1.2.0/: anchor.asdf  ascii.asdf  ascii.yaml  basic.asdf  basic.yaml  complex.asdf  complex.yaml  compressed.asdf  compressed.yaml  endian.asdf  endian.yaml  exploded.asdf  exploded.yaml  exploded0000.asdf  float.asdf  float.yaml  int.asdf  int.yaml  scalars.asdf  shared.asdf  shared.yaml  stream.asdf  stream.yaml  structured.asdf  structured.yaml  unicode_bmp.asdf  unicode_bmp.yaml  unicode_spp.asdf  unicode_spp.yaml
reference_files/1.3.0/: anchor.asdf  ascii.asdf  ascii.yaml  basic.asdf  basic.yaml  complex.asdf  complex.yaml  compressed.asdf  compressed.yaml  endian.asdf  endian.yaml  exploded.asdf  exploded.yaml  exploded0000.asdf  float.asdf  float.yaml  int.asdf  int.yaml  scalars.asdf  shared.asdf  shared.yaml  stream.asdf  stream.yaml  structured.asdf  structured.yaml  unicode_bmp.asdf  unicode_bmp.yaml  unicode_spp.asdf  unicode_spp.yaml
reference_files/1.4.0/: anchor.yaml  ascii.asdf  ascii.yaml  basic.asdf  basic.yaml  complex.asdf  complex.yaml  compressed.asdf  compressed.yaml  endian.asdf  endian.yaml  exploded.asdf  exploded.yaml  exploded0000.asdf  float.asdf  float.yaml  int.asdf  int.yaml  scalars.yaml  shared.asdf  shared.yaml  stream.asdf  stream.yaml  structured.asdf  structured.yaml  unicode_bmp.asdf  unicode_bmp.yaml  unicode_spp.asdf  unicode_spp.yaml
reference_files/1.5.0/: anchor.asdf  ascii.asdf  ascii.yaml  basic.asdf  basic.yaml  complex.asdf  complex.yaml  compressed.asdf  compressed.yaml  endian.asdf  endian.yaml  exploded.asdf  exploded.yaml  exploded0000.asdf  float.asdf  float.yaml  int.asdf  int.yaml  scalars.yaml  shared.asdf  shared.yaml  stream.asdf  stream.yaml  structured.asdf  structured.yaml  unicode_bmp.asdf  unicode_bmp.yaml  unicode_spp.asdf  unicode_spp.yaml
reference_files/1.6.0/: anchor.asdf  ascii.asdf  ascii.yaml  basic.asdf  basic.yaml  complex.asdf  complex.yaml  compressed.asdf  compressed.yaml  endian.asdf  endian.yaml  exploded.asdf  exploded0000.asdf  float.asdf  float.yaml  int.asdf  int.yaml  scalars.asdf  shared.asdf  shared.yaml  stream.asdf  stream.yaml  structured.asdf  structured.yaml  unicode_bmp.asdf  unicode_bmp.yaml  unicode_spp.asdf  unicode_spp.yaml
reference_files/generate/: README.rst  generate  generate.py
sandbox/: wcs_proposal1.yaml
schema_collections/: core-1.5.0.yaml  core-2.0.0.yaml
schemas/stsci.edu/asdf/: asdf-schema-0.1.0.yaml  asdf-schema-1.0.0.yaml  schema_collection-1.0.0.yaml  (+8 more)
scripts/: generate-core-manifests.py  lookup_extensions.py  update-schemas.py
source/: address_problems.rst  asdf_in_fits.rst  changes.rst  conf.py  extending.rst  file_layout.rst  index.rst  intro.rst  known_limits.rst  schema.rst  schemas.rst  tree.rst  versioning.rst
source/_static/: finfstandard.css
source/_templates/: layout.html
source/schemas/: asdf_schema.rst  core.rst  fits.rst  index.rst  time.rst  transform.rst  unit.rst  wcs.rst  yaml_schema.rst
source/sphinxext/: asdf.js  asdf.py  asdf_schema.css  category.py  md2rst.py  nodes.py
src/asdf_standard/: __init__.py  _versioning.py  exceptions.py  integration.py  resource.py
tests/: common.py  conftest.py  test_asdf_schema.py  test_core.py  test_docs.py  test_fits.py  test_integration.py  test_manifests.py  test_reference_files.py  test_resource.py  test_time.py  test_transform.py  test_unit.py  test_version_map.py  test_versioning.py  test_wcs.py  test_yaml_schema.py
(+637 files in other folders)
