[metadata]
name = asdf_standard
author = The ASDF Developers
author_email = help@stsci.edu
license = BSD-3-Clause
license_file = LICENSE
description = The ASDF Standard schemas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asdf-format/asdf-standard
project_urls =
    Bug Tracker = https://github.com/asdf-format/asdf-standard/issues
    Documentation = https://asdf-standard.readthedocs.io/en/stable
    Source Code = https://github.com/asdf-format/asdf-standard

[options]
python_requires = >=3.7
zip_safe = true
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    importlib_resources>=3;python_version<"3.9"

[options.extras_require]
docs =
    sphinx
    sphinx_bootstrap_theme
    sphinx-asdf
test =
    pytest
    pytest-sugar
    pyyaml
    asdf >= 2.8.0
    astropy
    gwcs
    packaging>=16.0

[options.entry_points]
asdf.resource_mappings =
    asdf_standard = asdf_standard.integration:get_resource_mappings

[tool:pytest]
asdf_schema_root = resources/schemas
asdf_schema_skip_tests =
    stsci.edu/asdf/asdf-schema-1.0.0.yaml
    stsci.edu/asdf/transform/domain-1.0.0.yaml
    stsci.edu/asdf/wcs/celestial_frame-1.0.0.yaml
    stsci.edu/asdf/wcs/celestial_frame-1.1.0.yaml
    stsci.edu/asdf/wcs/frame-1.0.0.yaml
    stsci.edu/asdf/wcs/frame-1.1.0.yaml
    stsci.edu/asdf/wcs/spectral_frame-1.1.0.yaml
    stsci.edu/asdf/wcs/step-1.1.0.yaml
    stsci.edu/asdf/wcs/step-1.2.0.yaml
    stsci.edu/asdf/wcs/wcs-1.1.0.yaml
    stsci.edu/asdf/wcs/wcs-1.2.0.yaml
    stsci.edu/yaml-schema/draft-01.yaml
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
addopts = --color=yes

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg, reference_files, schemas, source, .pytest_cache, .tox
